Tue Jul  8 14:15:38 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/RTPS/Sedp.cpp:
        * dds/DCPS/RTPS/Spdp.cpp:

          Increased the log level for messages on shutdown.

Tue Jul  8 02:49:18 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/idl/CPPTemplate.txt:

          Fixed fuzz error.

Mon Jul  7 21:15:36 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * bin/PerlDDS/Cross_Sync.pm:
        * bin/PerlDDS/Cross_Sync_Common.pm:

          Force verbose.
Mon Jul  7 21:02:05 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/idl/CPPTemplate.txt:

          Added check for get_deleted in store_synthetic_data and
          set_instance_state to prevent spdp/sedp from writing
          while the data reader is being deleted.

        * dds/DCPS/RTPS/Sedp.h:

          Added Psuedovar to keep var to data readers while providing
          derived pointer and change *_bit() methods to return
          Psuedovars.

        * dds/DCPS/RTPS/Sedp.cpp:
        * dds/DCPS/RTPS/Spdp.h:
        * dds/DCPS/RTPS/Spdp.cpp:

          Changed *_bit() methods to return Psuedovars.

        * bin/PerlDDS/Run_Test.pm:

          Cleanup of temporary diagnostics.

Thu Jul  3 19:45:42 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * configure:

          Download TAO 2.2a instead of 1.6a

Thu Jul  3 03:34:14 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/RTPS/Sedp.cpp:

          Improved logging.

        * dds/DCPS/RTPS/Spdp.cpp:

          Moved shutting down sedp before shutting down transport.

Wed Jul  2 18:22:15 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * bin/PerlDDS/Run_Test.pm:

          Fixed to only report that their are errors in log files if the status is
          still good.

        * dds/DCPS/RTPS/Sedp.cpp:
        * dds/DCPS/RTPS/Spdp.cpp:

          Added log statements to identify where ACCESS VIOLATION is occurring.
