@@ -699,7 +699,7 @@ Sedp::Task::svc_i(Msg::MsgType which_bit, const DDS::InstanceHandle_t* bit_ih)
   ACE_Auto_Basic_Ptr<const DDS::InstanceHandle_t> delete_the_ih(bit_ih);
   switch (which_bit) {
   case Msg::MSG_REMOVE_FROM_PUB_BIT: {
-    Publication_BIT_DR bit = sedp_->pub_bit();
+    DDS::PublicationBuiltinTopicDataDataReaderImpl* bit = sedp_->pub_bit();
     // bit may be null if the DomainParticipant is shutting down
     if (bit && *bit_ih != DDS::HANDLE_NIL) {
       bit->set_instance_state(*bit_ih,
@@ -708,7 +708,7 @@ Sedp::Task::svc_i(Msg::MsgType which_bit, const DDS::InstanceHandle_t* bit_ih)
     break;
   }
   case Msg::MSG_REMOVE_FROM_SUB_BIT: {
-    Subscription_BIT_DR bit = sedp_->sub_bit();
+    DDS::SubscriptionBuiltinTopicDataDataReaderImpl* bit = sedp_->sub_bit();
     // bit may be null if the DomainParticipant is shutting down
     if (bit && *bit_ih != DDS::HANDLE_NIL) {
       bit->set_instance_state(*bit_ih,
@@ -721,22 +721,31 @@ Sedp::Task::svc_i(Msg::MsgType which_bit, const DDS::InstanceHandle_t* bit_ih)
   }
 }
 
-Sedp::Publication_BIT_DR
+DDS::TopicBuiltinTopicDataDataReaderImpl*
+Sedp::topic_bit()
+{
+  DDS::Subscriber_var sub = spdp_.bit_subscriber();
+  DDS::DataReader_var d =
+    sub->lookup_datareader(DCPS::BUILT_IN_TOPIC_TOPIC);
+  return dynamic_cast<DDS::TopicBuiltinTopicDataDataReaderImpl*>(d.in());
+}
+
+DDS::PublicationBuiltinTopicDataDataReaderImpl*
 Sedp::pub_bit()
 {
   DDS::Subscriber_var sub = spdp_.bit_subscriber();
   DDS::DataReader_var d =
     sub->lookup_datareader(DCPS::BUILT_IN_PUBLICATION_TOPIC);
-  return Publication_BIT_DR(d);
+  return dynamic_cast<DDS::PublicationBuiltinTopicDataDataReaderImpl*>(d.in());
 }
 
-Sedp::Subscription_BIT_DR
+DDS::SubscriptionBuiltinTopicDataDataReaderImpl*
 Sedp::sub_bit()
 {
   DDS::Subscriber_var sub = spdp_.bit_subscriber();
   DDS::DataReader_var d =
     sub->lookup_datareader(DCPS::BUILT_IN_SUBSCRIPTION_TOPIC);
-  return Subscription_BIT_DR(d);
+  return dynamic_cast<DDS::SubscriptionBuiltinTopicDataDataReaderImpl*>(d.in());
 }
 
 DCPS::TopicStatus
@@ -1192,7 +1201,7 @@ Sedp::data_received(DCPS::MessageId message_id,
       {
         // Release lock for call into pub_bit
         ACE_GUARD(ACE_Reverse_Lock< ACE_Thread_Mutex>, rg, rev_lock);
-        Publication_BIT_DR bit = pub_bit();
+        DDS::PublicationBuiltinTopicDataDataReaderImpl* bit = pub_bit();
         if (bit) { // bit may be null if the DomainParticipant is shutting down
           instance_handle =
             bit->store_synthetic_data(wdata_copy.ddsPublicationData,
@@ -1218,7 +1227,7 @@ Sedp::data_received(DCPS::MessageId message_id,
 
     } else if (qosChanged(iter->second.writer_data_.ddsPublicationData,
                           wdata.ddsPublicationData)) { // update existing
-      Publication_BIT_DR bit = pub_bit();
+      DDS::PublicationBuiltinTopicDataDataReaderImpl* bit = pub_bit();
       if (bit) { // bit may be null if the DomainParticipant is shutting down
         bit->store_synthetic_data(iter->second.writer_data_.ddsPublicationData,
                                   DDS::NOT_NEW_VIEW_STATE);
@@ -1344,7 +1353,7 @@ Sedp::data_received(DCPS::MessageId message_id,
       {
         // Release lock for call into sub_bit
         ACE_GUARD(ACE_Reverse_Lock< ACE_Thread_Mutex>, rg, rev_lock);
-        Subscription_BIT_DR bit = sub_bit();
+        DDS::SubscriptionBuiltinTopicDataDataReaderImpl* bit = sub_bit();
         if (bit) { // bit may be null if the DomainParticipant is shutting down
           instance_handle =
             bit->store_synthetic_data(rdata_copy.ddsSubscriptionData,
@@ -1371,7 +1380,7 @@ Sedp::data_received(DCPS::MessageId message_id,
     } else { // update existing
       if (qosChanged(iter->second.reader_data_.ddsSubscriptionData,
                      rdata.ddsSubscriptionData)) {
-        Subscription_BIT_DR bit = sub_bit();
+        DDS::SubscriptionBuiltinTopicDataDataReaderImpl* bit = sub_bit();
         if (bit) { // bit may be null if the DomainParticipant is shutting down
           bit->store_synthetic_data(
                 iter->second.reader_data_.ddsSubscriptionData,
