@@ -1,3 +1,13 @@
+Tue Jul  8 14:40:32 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
+
+        * dds/DCPS/RTPS/Sedp.h:
+        * dds/DCPS/RTPS/Sedp.cpp:
+        * dds/DCPS/RTPS/Spdp.h:
+        * dds/DCPS/RTPS/Spdp.cpp:
+        * dds/idl/CPPTemplate.txt:
+
+          Reverted revisions 6373 and 6376.
+
 Tue Jul  8 14:15:38 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
 
         * dds/DCPS/RTPS/Sedp.cpp:
